// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patchman aggregates multiple advisories into a single play 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Upgrade the following packages:
#   - Apply RHBA-2019:0689
#   - Apply RHBA-2019:2871
#   - Apply RHBA-2019:4105
# Identifier: (patch-advisory:RHBA-2019:0689,patch-advisory:RHBA-2019:2871,patch-advisory:RHBA-2019:4105,fix)
# Version: test
- name: update packages
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_issues: "--advisory RHBA-2019:0689 --advisory RHBA-2019:2871 --advisory RHBA-2019:4105"
    requires_reboot: "false"
    insights_signature_exclude: "/hosts,/vars/insights_signature,/vars/insights_issues,/vars/requires_reboot"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU20xWU5VdDBRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      VTNZMUF2TVZGeGFuVkNUR1p4Y0ZFNVVpOVdkblYxWVVaVk1YSUtaa2x1Y3pSMFNWZHBSM3BGZEUx
      c1ZEZGtZMHRhZG5wM2MzY3lOMEZwV1ZKVlVGSXdURk5ITlVKb2NXdEdaMmwxVUUxSlkwNXZlbmRI
      TUVScU5IWjRkd3BQZVZWbU5XSmFaWGw2TDNnMlpsTk1hMVIwZWpOMk1VSjFVWFYxTlhWRlMxWnBX
      bE5GWXpVeGFWUnphVGgyU2tGRFFreFRWbTk2V2toUVN6aEJURkZJQ2tabk9VTlZhVk5pVTJKYWRq
      TmtlUzl4VUdkS1FUaHVVVEZQUkVwblYyWm1lRXBsVFZSWlpFNW5VVWRpT0VOMWVHOW5WMWRLYWtW
      V09YUXdSMXBDTm04S2VXNDBiSFpsTUhZdmNGQTVSWFl2ZUVwUGFHUXljMWxvWjFWbWNteG9XRTQ1
      V0ZweGJuaExlaTlsTUU0eE9FdG5RbWRYTURGNmRGVlhRVkl2TVhscWNBcGFlamdyVWt0NVdEQnBW
      SEZLZWpWVGNWSjBiMlZZV1U4eloyNXViV2R0ZG1jM1dqbFRjMHR6ZVdzd1UzaExhRkF3WmtnM1Yy
      MHljbmRoTWpsNFFpODRDbUp0YVRoNWR6TktTRUZvYzI5WmNGcDZUMGxuT1hGYVJYZGFZV1p3VVVS
      UVJFMWpVakJaUmtkWk4xZHpVMkpETVRKNVVuRkpNbTgzY0dSUEt6WlViMUVLUkdweE5qbE5hR1Vy
      TUZsUE9HOURUMWxQUWtKa1R6Sm5jaTkwYjFKaUwxWnBMeTl6VDNkMVdHdHZWeXQzYjFaMFdXczFU
      R28wVlRWUFQzbENjMlZMV2dwU1RUWjVORnBCY2tWdlpTODJhMUZNV1hsaVEwbFFPRGM0UkVOT1Rq
      bGpOMmd5UTFoRWNXNTZlWFJFT0ZNMWRXRnZkMlpoUnpoV09FVXhWR3AwWjFseENtZFpaVXhITVV3
      MVExTTNkbFJ4UzFSUWRIbE9VREkwZVRKeFExZDFhVzlDVGt0NmJFdzJSVXBQTDJwaGEybExhbTFH
      Wm05T1RTdFViRlY1VjJKUWQxRUtlbXRRVVdkUWRWcDBSbTFCVm01Qk9IVXJjVlJ1ZFdWeFVHWk9i
      MVJ6TWxSV1ZXeE9UbEI0UlZOSGJFUkpNSHBDWVhCbmNHTkhVUzlzWlRGUVR5OXpZZ3BWZW10SmMy
      WkxWMnhuUzJJemJYaFBZMmgzTndvOVpYRTFUQW90TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: check for update
      shell: "{{ ansible_facts['pkg_mgr'] }} check-update -q {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100

    - when: check_out.rc == 100
      name: upgrade package
      shell: "{{ ansible_facts['pkg_mgr'] }} update-minimal -d 2 -y {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: "{{requires_reboot}}"

- name: run insights
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`patchman generates a playbook including EPEL advisory 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Upgrade the following packages:
#   - Apply FEDORA-EPEL-2021-1ad3a13e05
#   - Apply RHBA-2019:4105
# Identifier: (patch-advisory:FEDORA-EPEL-2021-1ad3a13e05,patch-advisory:RHBA-2019:4105,fix)
# Version: test
- name: update packages
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_issues: "--advisory FEDORA-EPEL-2021-1ad3a13e05 --advisory RHBA-2019:4105"
    requires_reboot: "false"
    insights_signature_exclude: "/hosts,/vars/insights_signature,/vars/insights_issues,/vars/requires_reboot"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU20xWU5VdDBRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      VTNZMUF2TVZGeGFuVkNUR1p4Y0ZFNVVpOVdkblYxWVVaVk1YSUtaa2x1Y3pSMFNWZHBSM3BGZEUx
      c1ZEZGtZMHRhZG5wM2MzY3lOMEZwV1ZKVlVGSXdURk5ITlVKb2NXdEdaMmwxVUUxSlkwNXZlbmRI
      TUVScU5IWjRkd3BQZVZWbU5XSmFaWGw2TDNnMlpsTk1hMVIwZWpOMk1VSjFVWFYxTlhWRlMxWnBX
      bE5GWXpVeGFWUnphVGgyU2tGRFFreFRWbTk2V2toUVN6aEJURkZJQ2tabk9VTlZhVk5pVTJKYWRq
      TmtlUzl4VUdkS1FUaHVVVEZQUkVwblYyWm1lRXBsVFZSWlpFNW5VVWRpT0VOMWVHOW5WMWRLYWtW
      V09YUXdSMXBDTm04S2VXNDBiSFpsTUhZdmNGQTVSWFl2ZUVwUGFHUXljMWxvWjFWbWNteG9XRTQ1
      V0ZweGJuaExlaTlsTUU0eE9FdG5RbWRYTURGNmRGVlhRVkl2TVhscWNBcGFlamdyVWt0NVdEQnBW
      SEZLZWpWVGNWSjBiMlZZV1U4eloyNXViV2R0ZG1jM1dqbFRjMHR6ZVdzd1UzaExhRkF3WmtnM1Yy
      MHljbmRoTWpsNFFpODRDbUp0YVRoNWR6TktTRUZvYzI5WmNGcDZUMGxuT1hGYVJYZGFZV1p3VVVS
      UVJFMWpVakJaUmtkWk4xZHpVMkpETVRKNVVuRkpNbTgzY0dSUEt6WlViMUVLUkdweE5qbE5hR1Vy
      TUZsUE9HOURUMWxQUWtKa1R6Sm5jaTkwYjFKaUwxWnBMeTl6VDNkMVdHdHZWeXQzYjFaMFdXczFU
      R28wVlRWUFQzbENjMlZMV2dwU1RUWjVORnBCY2tWdlpTODJhMUZNV1hsaVEwbFFPRGM0UkVOT1Rq
      bGpOMmd5UTFoRWNXNTZlWFJFT0ZNMWRXRnZkMlpoUnpoV09FVXhWR3AwWjFseENtZFpaVXhITVV3
      MVExTTNkbFJ4UzFSUWRIbE9VREkwZVRKeFExZDFhVzlDVGt0NmJFdzJSVXBQTDJwaGEybExhbTFH
      Wm05T1RTdFViRlY1VjJKUWQxRUtlbXRRVVdkUWRWcDBSbTFCVm01Qk9IVXJjVlJ1ZFdWeFVHWk9i
      MVJ6TWxSV1ZXeE9UbEI0UlZOSGJFUkpNSHBDWVhCbmNHTkhVUzlzWlRGUVR5OXpZZ3BWZW10SmMy
      WkxWMnhuUzJJemJYaFBZMmgzTndvOVpYRTFUQW90TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: check for update
      shell: "{{ ansible_facts['pkg_mgr'] }} check-update -q {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100

    - when: check_out.rc == 100
      name: upgrade package
      shell: "{{ ansible_facts['pkg_mgr'] }} update-minimal -d 2 -y {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: "{{requires_reboot}}"

- name: run insights
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`patchman generates a playbook with patchman advisory remediation with a 6-digit id 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Apply RHBA-2024:101234
# Identifier: (patch-advisory:RHBA-2024:101234,fix)
# Version: test
- name: update packages
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_issues: "--advisory RHBA-2024:101234"
    requires_reboot: "false"
    insights_signature_exclude: "/hosts,/vars/insights_signature,/vars/insights_issues,/vars/requires_reboot"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU20xWU5VdDBRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      VTNZMUF2TVZGeGFuVkNUR1p4Y0ZFNVVpOVdkblYxWVVaVk1YSUtaa2x1Y3pSMFNWZHBSM3BGZEUx
      c1ZEZGtZMHRhZG5wM2MzY3lOMEZwV1ZKVlVGSXdURk5ITlVKb2NXdEdaMmwxVUUxSlkwNXZlbmRI
      TUVScU5IWjRkd3BQZVZWbU5XSmFaWGw2TDNnMlpsTk1hMVIwZWpOMk1VSjFVWFYxTlhWRlMxWnBX
      bE5GWXpVeGFWUnphVGgyU2tGRFFreFRWbTk2V2toUVN6aEJURkZJQ2tabk9VTlZhVk5pVTJKYWRq
      TmtlUzl4VUdkS1FUaHVVVEZQUkVwblYyWm1lRXBsVFZSWlpFNW5VVWRpT0VOMWVHOW5WMWRLYWtW
      V09YUXdSMXBDTm04S2VXNDBiSFpsTUhZdmNGQTVSWFl2ZUVwUGFHUXljMWxvWjFWbWNteG9XRTQ1
      V0ZweGJuaExlaTlsTUU0eE9FdG5RbWRYTURGNmRGVlhRVkl2TVhscWNBcGFlamdyVWt0NVdEQnBW
      SEZLZWpWVGNWSjBiMlZZV1U4eloyNXViV2R0ZG1jM1dqbFRjMHR6ZVdzd1UzaExhRkF3WmtnM1Yy
      MHljbmRoTWpsNFFpODRDbUp0YVRoNWR6TktTRUZvYzI5WmNGcDZUMGxuT1hGYVJYZGFZV1p3VVVS
      UVJFMWpVakJaUmtkWk4xZHpVMkpETVRKNVVuRkpNbTgzY0dSUEt6WlViMUVLUkdweE5qbE5hR1Vy
      TUZsUE9HOURUMWxQUWtKa1R6Sm5jaTkwYjFKaUwxWnBMeTl6VDNkMVdHdHZWeXQzYjFaMFdXczFU
      R28wVlRWUFQzbENjMlZMV2dwU1RUWjVORnBCY2tWdlpTODJhMUZNV1hsaVEwbFFPRGM0UkVOT1Rq
      bGpOMmd5UTFoRWNXNTZlWFJFT0ZNMWRXRnZkMlpoUnpoV09FVXhWR3AwWjFseENtZFpaVXhITVV3
      MVExTTNkbFJ4UzFSUWRIbE9VREkwZVRKeFExZDFhVzlDVGt0NmJFdzJSVXBQTDJwaGEybExhbTFH
      Wm05T1RTdFViRlY1VjJKUWQxRUtlbXRRVVdkUWRWcDBSbTFCVm01Qk9IVXJjVlJ1ZFdWeFVHWk9i
      MVJ6TWxSV1ZXeE9UbEI0UlZOSGJFUkpNSHBDWVhCbmNHTkhVUzlzWlRGUVR5OXpZZ3BWZW10SmMy
      WkxWMnhuUzJJemJYaFBZMmgzTndvOVpYRTFUQW90TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: check for update
      shell: "{{ ansible_facts['pkg_mgr'] }} check-update -q {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100

    - when: check_out.rc == 100
      name: upgrade package
      shell: "{{ ansible_facts['pkg_mgr'] }} update-minimal -d 2 -y {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: "{{requires_reboot}}"

- name: run insights
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`patchman generates a simple playbook with multiple patchman advisory remediations 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Apply RHBA-2019:4105
# Identifier: (patch-advisory:RHBA-2019:4105,fix)
# Version: test
- name: update packages
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_issues: "--advisory RHBA-2019:4105"
    requires_reboot: "false"
    insights_signature_exclude: "/hosts,/vars/insights_signature,/vars/insights_issues,/vars/requires_reboot"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU20xWU5VdDBRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      VTNZMUF2TVZGeGFuVkNUR1p4Y0ZFNVVpOVdkblYxWVVaVk1YSUtaa2x1Y3pSMFNWZHBSM3BGZEUx
      c1ZEZGtZMHRhZG5wM2MzY3lOMEZwV1ZKVlVGSXdURk5ITlVKb2NXdEdaMmwxVUUxSlkwNXZlbmRI
      TUVScU5IWjRkd3BQZVZWbU5XSmFaWGw2TDNnMlpsTk1hMVIwZWpOMk1VSjFVWFYxTlhWRlMxWnBX
      bE5GWXpVeGFWUnphVGgyU2tGRFFreFRWbTk2V2toUVN6aEJURkZJQ2tabk9VTlZhVk5pVTJKYWRq
      TmtlUzl4VUdkS1FUaHVVVEZQUkVwblYyWm1lRXBsVFZSWlpFNW5VVWRpT0VOMWVHOW5WMWRLYWtW
      V09YUXdSMXBDTm04S2VXNDBiSFpsTUhZdmNGQTVSWFl2ZUVwUGFHUXljMWxvWjFWbWNteG9XRTQ1
      V0ZweGJuaExlaTlsTUU0eE9FdG5RbWRYTURGNmRGVlhRVkl2TVhscWNBcGFlamdyVWt0NVdEQnBW
      SEZLZWpWVGNWSjBiMlZZV1U4eloyNXViV2R0ZG1jM1dqbFRjMHR6ZVdzd1UzaExhRkF3WmtnM1Yy
      MHljbmRoTWpsNFFpODRDbUp0YVRoNWR6TktTRUZvYzI5WmNGcDZUMGxuT1hGYVJYZGFZV1p3VVVS
      UVJFMWpVakJaUmtkWk4xZHpVMkpETVRKNVVuRkpNbTgzY0dSUEt6WlViMUVLUkdweE5qbE5hR1Vy
      TUZsUE9HOURUMWxQUWtKa1R6Sm5jaTkwYjFKaUwxWnBMeTl6VDNkMVdHdHZWeXQzYjFaMFdXczFU
      R28wVlRWUFQzbENjMlZMV2dwU1RUWjVORnBCY2tWdlpTODJhMUZNV1hsaVEwbFFPRGM0UkVOT1Rq
      bGpOMmd5UTFoRWNXNTZlWFJFT0ZNMWRXRnZkMlpoUnpoV09FVXhWR3AwWjFseENtZFpaVXhITVV3
      MVExTTNkbFJ4UzFSUWRIbE9VREkwZVRKeFExZDFhVzlDVGt0NmJFdzJSVXBQTDJwaGEybExhbTFH
      Wm05T1RTdFViRlY1VjJKUWQxRUtlbXRRVVdkUWRWcDBSbTFCVm01Qk9IVXJjVlJ1ZFdWeFVHWk9i
      MVJ6TWxSV1ZXeE9UbEI0UlZOSGJFUkpNSHBDWVhCbmNHTkhVUzlzWlRGUVR5OXpZZ3BWZW10SmMy
      WkxWMnhuUzJJemJYaFBZMmgzTndvOVpYRTFUQW90TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: check for update
      shell: "{{ ansible_facts['pkg_mgr'] }} check-update -q {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100

    - when: check_out.rc == 100
      name: upgrade package
      shell: "{{ ansible_facts['pkg_mgr'] }} update-minimal -d 2 -y {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: "{{requires_reboot}}"

# Upgrade the following packages:
#   - Apply RHBA-2019:0689
#   - Apply RHBA-2019:2871
# Identifier: (patch-advisory:RHBA-2019:0689,patch-advisory:RHBA-2019:2871,fix)
# Version: test
- name: update packages
  hosts: "53fbcd90-9c8f-11e8-98d0-529269fb1459.example.com"
  vars:
    insights_issues: "--advisory RHBA-2019:0689 --advisory RHBA-2019:2871"
    requires_reboot: "false"
    insights_signature_exclude: "/hosts,/vars/insights_signature,/vars/insights_issues,/vars/requires_reboot"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU20xWU5VdDBRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      VTNZMUF2TVZGeGFuVkNUR1p4Y0ZFNVVpOVdkblYxWVVaVk1YSUtaa2x1Y3pSMFNWZHBSM3BGZEUx
      c1ZEZGtZMHRhZG5wM2MzY3lOMEZwV1ZKVlVGSXdURk5ITlVKb2NXdEdaMmwxVUUxSlkwNXZlbmRI
      TUVScU5IWjRkd3BQZVZWbU5XSmFaWGw2TDNnMlpsTk1hMVIwZWpOMk1VSjFVWFYxTlhWRlMxWnBX
      bE5GWXpVeGFWUnphVGgyU2tGRFFreFRWbTk2V2toUVN6aEJURkZJQ2tabk9VTlZhVk5pVTJKYWRq
      TmtlUzl4VUdkS1FUaHVVVEZQUkVwblYyWm1lRXBsVFZSWlpFNW5VVWRpT0VOMWVHOW5WMWRLYWtW
      V09YUXdSMXBDTm04S2VXNDBiSFpsTUhZdmNGQTVSWFl2ZUVwUGFHUXljMWxvWjFWbWNteG9XRTQ1
      V0ZweGJuaExlaTlsTUU0eE9FdG5RbWRYTURGNmRGVlhRVkl2TVhscWNBcGFlamdyVWt0NVdEQnBW
      SEZLZWpWVGNWSjBiMlZZV1U4eloyNXViV2R0ZG1jM1dqbFRjMHR6ZVdzd1UzaExhRkF3WmtnM1Yy
      MHljbmRoTWpsNFFpODRDbUp0YVRoNWR6TktTRUZvYzI5WmNGcDZUMGxuT1hGYVJYZGFZV1p3VVVS
      UVJFMWpVakJaUmtkWk4xZHpVMkpETVRKNVVuRkpNbTgzY0dSUEt6WlViMUVLUkdweE5qbE5hR1Vy
      TUZsUE9HOURUMWxQUWtKa1R6Sm5jaTkwYjFKaUwxWnBMeTl6VDNkMVdHdHZWeXQzYjFaMFdXczFU
      R28wVlRWUFQzbENjMlZMV2dwU1RUWjVORnBCY2tWdlpTODJhMUZNV1hsaVEwbFFPRGM0UkVOT1Rq
      bGpOMmd5UTFoRWNXNTZlWFJFT0ZNMWRXRnZkMlpoUnpoV09FVXhWR3AwWjFseENtZFpaVXhITVV3
      MVExTTNkbFJ4UzFSUWRIbE9VREkwZVRKeFExZDFhVzlDVGt0NmJFdzJSVXBQTDJwaGEybExhbTFH
      Wm05T1RTdFViRlY1VjJKUWQxRUtlbXRRVVdkUWRWcDBSbTFCVm01Qk9IVXJjVlJ1ZFdWeFVHWk9i
      MVJ6TWxSV1ZXeE9UbEI0UlZOSGJFUkpNSHBDWVhCbmNHTkhVUzlzWlRGUVR5OXpZZ3BWZW10SmMy
      WkxWMnhuUzJJemJYaFBZMmgzTndvOVpYRTFUQW90TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: check for update
      shell: "{{ ansible_facts['pkg_mgr'] }} check-update -q {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100

    - when: check_out.rc == 100
      name: upgrade package
      shell: "{{ ansible_facts['pkg_mgr'] }} update-minimal -d 2 -y {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: "{{requires_reboot}}"

- name: run insights
  hosts: "53fbcd90-9c8f-11e8-98d0-529269fb1459.example.com,68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`patchman generates a simple playbook with single patchman advisory remediation 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

# Apply RHBA-2019:4105
# Identifier: (patch-advisory:RHBA-2019:4105,fix)
# Version: test
- name: update packages
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_issues: "--advisory RHBA-2019:4105"
    requires_reboot: "false"
    insights_signature_exclude: "/hosts,/vars/insights_signature,/vars/insights_issues,/vars/requires_reboot"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU20xWU5VdDBRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      VTNZMUF2TVZGeGFuVkNUR1p4Y0ZFNVVpOVdkblYxWVVaVk1YSUtaa2x1Y3pSMFNWZHBSM3BGZEUx
      c1ZEZGtZMHRhZG5wM2MzY3lOMEZwV1ZKVlVGSXdURk5ITlVKb2NXdEdaMmwxVUUxSlkwNXZlbmRI
      TUVScU5IWjRkd3BQZVZWbU5XSmFaWGw2TDNnMlpsTk1hMVIwZWpOMk1VSjFVWFYxTlhWRlMxWnBX
      bE5GWXpVeGFWUnphVGgyU2tGRFFreFRWbTk2V2toUVN6aEJURkZJQ2tabk9VTlZhVk5pVTJKYWRq
      TmtlUzl4VUdkS1FUaHVVVEZQUkVwblYyWm1lRXBsVFZSWlpFNW5VVWRpT0VOMWVHOW5WMWRLYWtW
      V09YUXdSMXBDTm04S2VXNDBiSFpsTUhZdmNGQTVSWFl2ZUVwUGFHUXljMWxvWjFWbWNteG9XRTQ1
      V0ZweGJuaExlaTlsTUU0eE9FdG5RbWRYTURGNmRGVlhRVkl2TVhscWNBcGFlamdyVWt0NVdEQnBW
      SEZLZWpWVGNWSjBiMlZZV1U4eloyNXViV2R0ZG1jM1dqbFRjMHR6ZVdzd1UzaExhRkF3WmtnM1Yy
      MHljbmRoTWpsNFFpODRDbUp0YVRoNWR6TktTRUZvYzI5WmNGcDZUMGxuT1hGYVJYZGFZV1p3VVVS
      UVJFMWpVakJaUmtkWk4xZHpVMkpETVRKNVVuRkpNbTgzY0dSUEt6WlViMUVLUkdweE5qbE5hR1Vy
      TUZsUE9HOURUMWxQUWtKa1R6Sm5jaTkwYjFKaUwxWnBMeTl6VDNkMVdHdHZWeXQzYjFaMFdXczFU
      R28wVlRWUFQzbENjMlZMV2dwU1RUWjVORnBCY2tWdlpTODJhMUZNV1hsaVEwbFFPRGM0UkVOT1Rq
      bGpOMmd5UTFoRWNXNTZlWFJFT0ZNMWRXRnZkMlpoUnpoV09FVXhWR3AwWjFseENtZFpaVXhITVV3
      MVExTTNkbFJ4UzFSUWRIbE9VREkwZVRKeFExZDFhVzlDVGt0NmJFdzJSVXBQTDJwaGEybExhbTFH
      Wm05T1RTdFViRlY1VjJKUWQxRUtlbXRRVVdkUWRWcDBSbTFCVm01Qk9IVXJjVlJ1ZFdWeFVHWk9i
      MVJ6TWxSV1ZXeE9UbEI0UlZOSGJFUkpNSHBDWVhCbmNHTkhVUzlzWlRGUVR5OXpZZ3BWZW10SmMy
      WkxWMnhuUzJJemJYaFBZMmgzTndvOVpYRTFUQW90TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: check for update
      shell: "{{ ansible_facts['pkg_mgr'] }} check-update -q {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"
      check_mode: no
      register: check_out
      failed_when: check_out.rc != 0 and check_out.rc != 100

    - when: check_out.rc == 100
      name: upgrade package
      shell: "{{ ansible_facts['pkg_mgr'] }} update-minimal -d 2 -y {{ insights_issues | regex_search('(--advisory ((FEDORA-EPEL-[\\\\w-]+)|(RH[SBE]A-20[\\\\d]{2}:[\\\\d]{4,6}))\\\\s*)+') }}"

    - when: check_out.rc == 100
      name: set reboot fact
      set_fact:
        insights_needs_reboot: "{{requires_reboot}}"

- name: run insights
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;
